crates/ir/tests/snapshots/lower_test__traits__hkt_functor.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__hkt_functor

type Box[a] = Box#0(a)
trait Functor[o8] { fmap(o8[p8], (p8) -> q8): o8[q8] }
instance traits__hkt_functor.Functor[Box] { fmap=Functor$$Box$$fmap }
import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]

fn Functor$$Box$$fmap(v0: Box[v8], v1: (v8) -> x8) -> ~Box[x8] =
  switch v0 {
    0 (v2: v8) ->
      let v3: x8 = call_closure v1(v2)
      let v4: ~Box[x8] = construct Box::Box#0(v3)
      v4
  }
