crates/ir/tests/snapshots/lower_test__traits__hkt_multi_trait.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__hkt_multi_trait

type Box[a] = Box#0(a)
trait Container[n9] { wrap(o9): n9[o9] }
trait Functor[k9] { fmap(k9[l9], (l9) -> m9): k9[m9] }
instance traits__hkt_multi_trait.Functor[Box] { fmap=Functor$$Box$$fmap }
instance traits__hkt_multi_trait.Container[Box] { wrap=Container$$Box$$wrap }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]

fn Functor$$Box$$fmap(v0: Box[t9], v1: (t9) -> v9) -> ~Box[v9] =
  switch v0 {
    0 (v2: t9) ->
      let v3: v9 = call_closure v1(v2)
      let v4: ~Box[v9] = construct Box::Box#0(v3)
      v4
  }

fn Container$$Box$$wrap(v5: o9) -> ~Box[o9] =
  let v6: ~Box[o9] = construct Box::Box#0(v5)
  v6
